--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -95,23 +95,25 @@
                     <span asp-validation-for="TotalExperience" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="LastCompany" class="control-label"></label>
-                    <input asp-for="LastCompany" class="form-control" />
-                    <span asp-validation-for="LastCompany" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <label asp-for="LastPosition" class="control-label"></label>
-                    <input asp-for="LastPosition" class="form-control" />
-                    <span asp-validation-for="LastPosition" class="text-danger"></span>
-                </div>
-                <div class="form-group">
                     <label asp-for="OccupationId" class="control-label"></label>
                     <select asp-for="OccupationId" class="form-control" asp-items="ViewBag.OccupationId">
                         <option value="">Meslek Seçiniz</option>
                     </select>
                 </div>
+               
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="LastCompany" class="control-label"></label>
+                    <input asp-for="LastCompany" class="form-control" />
+                    <span asp-validation-for="LastCompany" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastPosition" class="control-label"></label>
+                    <input asp-for="LastPosition" class="form-control" />
+                    <span asp-validation-for="LastPosition" class="text-danger"></span>
+                </div>
+
             </div>
         </div>
     </fieldset>
@@ -153,6 +155,18 @@
     <br />
     <fieldset>
         <legend>Seminer ve Kurslar</legend>
+        <div class="row">
+            <div class="col-md-6">
+
+            </div>
+            <div class="col-md-6">
+
+            </div>
+        </div>
+    </fieldset>
+    <br />
+    <fieldset>
+        <legend>Projeler ve Yetkinlikler</legend>
         <div class="row">
             <div class="col-md-6">
 
@@ -217,16 +231,16 @@
 
     <div>
 
-    <input asp-for="CreateDate" type="hidden" />
+        <input asp-for="CreateDate" type="hidden" />
 
-    <input asp-for="CreatedBy" type="hidden" />
+        <input asp-for="CreatedBy" type="hidden" />
 
-    <input asp-for="UpdateDate" type="hidden" />
+        <input asp-for="UpdateDate" type="hidden" />
 
-    <input asp-for="UpdatedBy" type="hidden" />
+        <input asp-for="UpdatedBy" type="hidden" />
 
 
-    <input asp-for="IPAddress" type="hidden" />
+        <input asp-for="IPAddress" type="hidden" />
     </div>
     <div class="form-group">
         <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /><a asp-action="Index" class="btn btn-danger btn-sm">İptal</a>
