resume bugs fixed

--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -229,7 +229,7 @@
     <input asp-for="IPAddress" type="hidden" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /><a asp-action="Index" class="btn btn-danger btn-sm">İptal</a>
+        <input type="submit" value="Kaydet" class="btn btn-success btn-sm" /> <a asp-action="MyResumes" class="btn btn-danger btn-sm">İptal</a>
     </div>
 
 </form>
