--- a/HrPortalV2.Web/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Edit.cshtml
@@ -7,12 +7,29 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
+            @if (ViewBag.Saved == true)
+            {
+                <div class="alert alert-success">
+                    Kaydetme işlemi başarıyla gerçekleşti. <a asp-action="MyCompanies">Listeye Geri Dön</a>
+                </div>
+
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input asp-for="Logo" type="hidden" />
+                <label asp-for="Logo" class="control-label"></label>
+                @if (!string.IsNullOrEmpty(Model.Logo))
+                {
+                    <img src="~/Uploads/@Model.Logo" width="50" />
+                }
+                <input name="File" type="file" class="form-control" />
+                <span asp-validation-for="Logo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
@@ -35,23 +52,36 @@
                 <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
             </div>
             <div class="form-group">
+                <label asp-for="SectorId" class="control-label"></label>
+                <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId"> <option value="">Sektor seçiniz</option></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="Address" class="control-label"></label>
                 <textarea asp-for="Address" class="form-control"></textarea>
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SectorId" class="control-label"></label>
-                <select asp-for="SectorId" class="form-control" asp-items="ViewBag.SectorId"> <option value="">Sektor seçiniz</option></select>
+                <label asp-for="Phone" class="control-label"></label>
+                <input asp-for="Phone" class="form-control">
+                <span asp-validation-for="Phone" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
-                    </label>
-                </div>
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control">
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <label asp-for="Website" class="control-label"></label>
+                <input asp-for="Website" class="form-control">
+                <span asp-validation-for="Website" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ContactName" class="control-label"></label>
+                <input asp-for="ContactName" class="form-control">
+                <span asp-validation-for="ContactName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div>
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
@@ -74,6 +104,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Kaydet" class="btn btn-success" />
+
             </div>
         </form>
     </div>
