--- a/HrPortalV2.Web/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Create.cshtml
@@ -22,7 +22,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId">
+                    <option value="">Firma Seçiniz</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="PublishDate" class="control-label"></label>
