--- a/HrPortalV2.Web/Views/Jobs/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Edit.cshtml
@@ -8,7 +8,14 @@
 <hr />
 <div class="row">
     <div class="col-md-12">
-        <form asp-action="Create">
+        <form asp-action="Edit">
+            @if (ViewBag.Saved == true)
+            {
+                <div class="alert alert-success">
+                    Kaydetme işlemi başarıyla gerçekleşti. <a asp-action="MyJobs" asp-controller="Jobs" asp-area="">Listeye Geri Dön</a>
+                </div>
+
+            }
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -22,7 +29,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId">
+                    <option value="">Firma Seçiniz</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="PublishDate" class="control-label"></label>
@@ -55,7 +64,7 @@
             <input asp-for="UpdatedBy" type="hidden" />
             <input asp-for="IPAddress" type="hidden" />
             <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />  <a asp-action="Index" asp-controller="Jobs" asp-area="">Geri Dön</a>
+                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />  <a asp-action="MyJobs" asp-controller="Jobs" asp-area="">Geri Dön</a>
             </div>
         </form>
     </div>
