--- a/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/MyJobs.cshtml
@@ -30,7 +30,9 @@
                     @Html.DisplayFor(modelItem => item.Company.Name)
                 </td>
                 <td>
-                    <a asp-action="Apply" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Başvuru Yap</a> 
+                    <a asp-action="Apply" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-primary btn-sm">Başvuru Yap</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" asp-controller="Jobs" asp-area="" class="btn btn-danger btn-sm" onclick="return confirm('Bu ilanı silmek istediğiniz emin misiniz?');"><i class="fa fa-trash"></i> Sil</a>
                 </td>
             </tr>
             }
