--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -82,25 +82,30 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
-                    <option value="">Ülke seçiniz</option>
-                </select>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CountryId" class="control-label"></label>
+                    <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
+                        <option value="">Ülke seçiniz</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CityId" class="control-label"></label>
+                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CountyId" class="control-label"></label>
+                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                </div>
+                </div>
 
             </div>
-            <div class="form-group">
-                <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CountyId" class="control-label"></label>
-                <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
-            </div>
-
-
-        </div>
-    </fieldset>
+</fieldset>
     <br />
 
     <fieldset>
@@ -295,7 +300,6 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <div>
                         <label>
