--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -3,14 +3,7 @@
 @{
     ViewData["Title"] = "Özgeçmiş Düzenle";
 }
-<form asp-action="Edit" enctype="multipart/form-data">
-    @if (ViewBag.Saved == true)
-    {
-        <div class="alert alert-success">
-            Kaydetme işlemi başarıyla gerçekleşti. <a asp-action="Index">Listeye Geri Dön</a>.
-        </div>
-
-    }
+<form asp-action="Create" enctype="multipart/form-data">
     <fieldset>
         <legend>Kişisel Bilgiler</legend>
         <div class="row">
@@ -37,6 +30,13 @@
             </div>
             <div class="col-md-6">
                 <div class="form-group">
+                    <label asp-for="MaritalStatus" class="control-label"></label>
+                    <select asp-for="MaritalStatus" class="form-control" asp-items="@Html.GetEnumSelectList(typeof(MaritalStatus))">
+                        <option value="">Medeni Durumu Seçiniz</option>
+                    </select>
+                    <span asp-validation-for="MaritalStatus" class="text-danger"></span>
+                </div>
+                <div class="form-group">
                     <input asp-for="Photo" type="hidden" />
                     <label asp-for="Photo" class="control-label"></label>
                     @if (!string.IsNullOrEmpty(Model.Photo))
@@ -46,13 +46,6 @@
 
                     <input name="File" type="file" class="form-control" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="MaritalStatus" class="control-label"></label>
-                    <select asp-for="MaritalStatus" class="form-control" asp-items="@Html.GetEnumSelectList(typeof(MaritalStatus))">
-                        <option value="">Medeni Durumu Seçiniz</option>
-                    </select>
-                    <span asp-validation-for="MaritalStatus" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="MilitaryStatus" class="control-label"></label>
@@ -88,6 +81,29 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
             </div>
+
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CountryId" class="control-label"></label>
+                    <select asp-for="CountryId" class="form-control" asp-items="ViewBag.CountryId" onchange="CountryChange(this)">
+                        <option value="">Ülke seçiniz</option>
+                    </select>
+
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CityId" class="control-label"></label>
+                    <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId" onchange="CityChange(this)">   <option value="">Şehir seçiniz</option></select>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="CountyId" class="control-label"></label>
+                    <select asp-for="CountyId" class="form-control" asp-items="ViewBag.CountyId">   <option value="">İlçe seçiniz</option></select>
+                </div>
+            </div>
+
         </div>
     </fieldset>
     <br />
@@ -107,7 +123,7 @@
                         <option value="">Meslek Seçiniz</option>
                     </select>
                 </div>
-                
+
             </div>
             <div class="col-md-6">
                 <div class="form-group">
@@ -163,12 +179,14 @@
     <fieldset>
         <legend>Seminer ve Kurslar</legend>
         <div class="row">
-            <div class="col-md-6">
-
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label asp-for="Courses" class="control-label"></label>
+                    <textarea asp-for="Courses" class="form-control"></textarea>
+                    <span asp-validation-for="Courses" class="text-danger"></span>
+                </div>
             </div>
-            <div class="col-md-6">
 
-            </div>
         </div>
     </fieldset>
     <br />
@@ -176,15 +194,24 @@
         <legend>Projeler ve Yetkinlikler</legend>
         <div class="row">
             <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Projects" class="control-label"></label>
+                    <textarea asp-for="Projects" class="form-control"></textarea>
+                    <span asp-validation-for="Projects" class="text-danger"></span>
+                </div>
 
             </div>
             <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Skills" class="control-label"></label>
+                    <textarea asp-for="Skills" class="form-control"></textarea>
+                    <span asp-validation-for="Skills" class="text-danger"></span>
+                </div>
 
             </div>
         </div>
     </fieldset>
     <br />
-
     <fieldset>
         <legend>Özgeçmiş Dosyaları</legend>
         <div class="row">
@@ -196,11 +223,76 @@
             </div>
         </div>
     </fieldset>
-
+    <br />
+    <fieldset>
+        <legend>Sosyal Medya Hesapları</legend>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Blog" class="control-label"></label>
+                    <input asp-for="Blog" class="form-control" />
+                    <span asp-validation-for="Blog" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LinkedIn" class="control-label"></label>
+                    <input asp-for="LinkedIn" class="form-control" />
+                    <span asp-validation-for="LinkedIn" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="GitHub" class="control-label"></label>
+                    <input asp-for="GitHub" class="form-control" />
+                    <span asp-validation-for="GitHub" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Dribble" class="control-label"></label>
+                    <input asp-for="Dribble" class="form-control" />
+                    <span asp-validation-for="Dribble" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Behance" class="control-label"></label>
+                    <input asp-for="Behance" class="form-control" />
+                    <span asp-validation-for="Behance" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="Youtube" class="control-label"></label>
+                    <input asp-for="Youtube" class="form-control" />
+                    <span asp-validation-for="Youtube" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Instagram" class="control-label"></label>
+                    <input asp-for="Instagram" class="form-control" />
+                    <span asp-validation-for="Instagram" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Facebook" class="control-label"></label>
+                    <input asp-for="Facebook" class="form-control" />
+                    <span asp-validation-for="Facebook " class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Twitter" class="control-label"></label>
+                    <input asp-for="Twitter" class="form-control" />
+                    <span asp-validation-for="Twitter" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
+    </fieldset>
+    <br />
     <fieldset>
         <legend>Diğer Bilgiler</legend>
         <div class="row">
             <div class="col-md-6">
+                <div class="form-group">
+                    <label asp-for="DrivingLicense" class="control-label"></label>
+                    <input asp-for="DrivingLicense" class="form-control" />
+                    <span asp-validation-for="DrivingLicense" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Hobbies" class="control-label"></label>
+                    <input asp-for="Hobbies" class="form-control" />
+                    <span asp-validation-for="Hobbies" class="text-danger"></span>
+                </div>
                 <div class="form-group">
                     <div>
                         <label>
@@ -214,6 +306,18 @@
                             <input asp-for="IsSeekingJob" /> @Html.DisplayNameFor(model => model.IsSeekingJob)
                         </label>
                     </div>
+                    <div>
+                        <label>
+                            <input asp-for="IsTravelDisabled" /> @Html.DisplayNameFor(model => model.IsTravelDisabled)
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input asp-for="UsingCigarette" /> @Html.DisplayNameFor(model => model.UsingCigarette)
+                        </label>
+                    </div>
+
+
                 </div>
             </div>
             <div class="col-md-6">
@@ -231,6 +335,17 @@
                             <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                         </label>
                     </div>
+                    <div>
+                        <label>
+                            <input asp-for="IsDisabled" /> @Html.DisplayNameFor(model => model.IsDisabled)
+                        </label>
+                    </div>
+                    <div>
+                        <label>
+                            <input asp-for="IsSubsidized" /> @Html.DisplayNameFor(model => model.IsSubsidized)
+                        </label>
+                    </div>
+
                 </div>
             </div>
         </div>
