identity some bugs fixed

--- a/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Views/Shared/_LoginPartial.cshtml
@@ -5,7 +5,7 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
+    <form asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             @if (User.IsInRole("Company"))
             {
@@ -115,7 +115,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-default">
                     <li>
-                        <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Profilim">
+                        <a href="/Account/Manage/Index" title="Profilim">
                             <i class="icon-user"></i> Profilim
                         </a>
                     </li>
@@ -192,7 +192,7 @@ else
 
         </li>
         <li style="margin-left:10px;">
-            <button type="button" onclick="window.location='/Identity/Account/Login'" class="btn btn-success btn-sm">
+            <button type="button" onclick="window.location='/Account/Login'" class="btn btn-success btn-sm">
                 <i class="icon-bell"></i>
                 Üye Girişi
             </button>
