companies details edited

--- a/HrPortalV2.Web/Views/Companies/Details.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Details.cshtml
@@ -36,8 +36,8 @@
                                 <li>
                                     <strong>Adres:</strong>
                                     @Model.Address
-                                    @Model.County.Name/@Model.City.Name
-                                    @Model.Country.Name
+                                    @Model.County?.Name/@Model.City?.Name
+                                    @Model.Country?.Name
                                 </li>
                                 
                             </ul>
