--- a/HrPortalV2.Web/Views/Messages/Create.cshtml
+++ b/HrPortalV2.Web/Views/Messages/Create.cshtml
@@ -1,12 +1,9 @@
 ﻿@model HrPortalV2.Models.Message
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Mesaj Gönder";
 }
 
-<h2>Create</h2>
-
-<h4>Message</h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -57,16 +54,15 @@
                
                 <input asp-for="IPAddress" type="hidden" />
             
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
+                <div class="form-group">
+                    <input type="submit" value="Gönder" class="btn btn-primary btn-sm" />
+                    <a href="javascript:void(0)" class="btn btn-danger btn-sm" onclick="history.back();">İptal</a>
+                </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
