--- a/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Messages/MyMessagesSentToMyResumes.cshtml
@@ -27,16 +27,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.From)
+                    @Html.DisplayFor(modelItem => item.FromName)
                 </td>
               
                 <td>
                     @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary btn-sm">Mesajı Oku</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Sil</a>
                 </td>
             </tr>
         }
