--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -3,13 +3,18 @@
 @{
     ViewData["Title"] = "Özgeçmiş Düzenle";
 }
-<form asp-action="Create" enctype="multipart/form-data">
+<form asp-action="Edit" enctype="multipart/form-data">
     <fieldset>
         <legend>Kişisel Bilgiler</legend>
         <div class="row">
             <div class="col-md-6">
 
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="ResumeName" class="control-label"></label>
+                    <input asp-for="ResumeName" class="form-control" />
+                    <span asp-validation-for="ResumeName" class="text-danger"></span>
+                </div>
                 <div class="form-group">
                     <label asp-for="FirstName" class="control-label"></label>
                     <input asp-for="FirstName" class="form-control" />
